name:                Minesweeper
version:             0.1.0.0
synopsis:            Simple project template from stack
license:             BSD3
license-file:        LICENSE
author:              Jamie Taylor
copyright:           2024
category:            test
build-type:          Simple
cabal-version:       >=1.10

executable Minesweeper
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Minesweeper
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , containers
                     , threepenny-gui
                     , split
                     , random
                     , random-shuffle
                     , time
                     , vector

